used next-auth to authenticate users for login

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 MONGODB_URI=mongodb+srv://eluent:Amantanrim619!@cluster0.iukbvsc.mongodb.net/ecommerce-food-market?retryWrites=true&w=majority
+NEXTAUTH_URL=http://localhost:3000/
