--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@headlessui/react": "^1.7.7",
     "@heroicons/react": "^2.0.13",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.1",
     "@paypal/react-paypal-js": "^7.8.2",
     "bcryptjs": "^2.4.3",
     "eslint": "8.29.0",
