--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.1",
     "@paypal/react-paypal-js": "^7.8.2",
+    "axios": "^1.2.1",
     "bcryptjs": "^2.4.3",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
@@ -23,9 +24,11 @@
     "mongoose": "^6.8.1",
     "next": "13.0.6",
     "next-auth": "^4.18.6",
+    "next-i18next": "^13.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.41.0",
+    "react-i18next": "^12.1.1",
     "react-toastify": "^9.1.1"
   },
   "devDependencies": {
